--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      crossorigin="anonymous"
      referrerpolicy="no-referrer"
    />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css" />
 
 </head>
 <body>
