images work link

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
      <div class="container">
         <!-- front card -->
          <div class="card-container">
-            <div class="front" id="front" style="background-image: url(/images/61754.jpg); background-repeat: no-repeat; background-size: cover;overlay: rgba(0, 0, 0, 0.5);">
+            <div class="front" id="front" style="background-image: url(images/61754.jpg); background-repeat: no-repeat; background-size: cover;overlay: rgba(0, 0, 0, 0.5);">
                 <div class="image">
-                    <img src="/images/icons8-chip-card-48.png" alt="chip" class="chip-logo">
-                    <img src="/images/png-transparent-logo-mastercard-font-solar-home-text-orange-logo-removebg-preview.png" alt="visa" class="visa-logo">
+                    <img src="images/icons8-chip-card-48.png" alt="chip" class="chip-logo">
+                    <img src="images/png-transparent-logo-mastercard-font-solar-home-text-orange-logo-removebg-preview.png" alt="visa" class="visa-logo">
                 </div>
                 <h2 class="card-number-box">0000 0000 0000</h2>
                 <div class="flexbox">
@@ -45,8 +45,8 @@
             </div>
 
             <!-- Card Back -->
-             <div class="back" id="back"  style="background-image: url(/images/61754.jpg); background-repeat: no-repeat; background-size: cover;overlay: rgba(0, 0, 0, 0.5);">
-                <img src="/images/png-transparent-logo-mastercard-font-solar-home-text-orange-logo-removebg-preview.png" alt="visa" class="visa-logo">
+             <div class="back" id="back"  style="background-image: url(images/61754.jpg); background-repeat: no-repeat; background-size: cover;overlay: rgba(0, 0, 0, 0.5);">
+                <img src="images/png-transparent-logo-mastercard-font-solar-home-text-orange-logo-removebg-preview.png" alt="visa" class="visa-logo">
                 <div class="stripe"></div>
                 <div class="back-box">
                     <span class="back-cvv">cvv</span>
