--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
       </div>
 
       <!-- js link connection -->
-      <script src="/javascript/script.js"></script>
+      <script src="javascript/script.js"></script>
 </body>
 </html>
