--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
      <!-- completed status -->
      <div class="completed-container" id="completed-container">
         <div class="completed-img">
-          <img src="/images/icon-complete.svg" alt="comp" class="c-img" />
+          <img src="images/icon-complete.svg" alt="comp" class="c-img" />
         </div>
         <h2 class="thanks">THANK YOU !</h2>
         <p class="c-para">We've added your card details</p>
